Cleanup: Add test

--- a/TicTacToe.Tests/TicTacToe.Tests.csproj
+++ b/TicTacToe.Tests/TicTacToe.Tests.csproj
@@ -18,4 +18,8 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TicTacToe\tic-tac-toe-cli.csproj" />
+  </ItemGroup>
+
 </Project>
